--- a/CVS_Review/app/src/main/res/values/strings.xml
+++ b/CVS_Review/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CVS_Review</string>
+    <string name="app_name">Barcode</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_home">Home</string>
