--- a/CVS_Review/app/src/main/res/values/strings.xml
+++ b/CVS_Review/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_home">Home</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">154024179995180</string>
+    <string name="fb_login_protocol_scheme">fb154024179995180</string>
 </resources>
